cmake_minimum_required(VERSION 3.11)

project(TestEigen)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
# include_directories(E:/Downloads2/eigen-3.1.4)
# include_directories(E:/Downloads/boost_1_54_0)
include_directories(${CMAKE_SOURCE_DIR}/eigen-3.4.0)
add_executable(test1 test1.cpp)
add_executable(matrices_vectors_size_runtime matrices_vectors_size_runtime.cpp)
# add_executable(test_compile_error test_compile_error.cpp)
